--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -9,9 +9,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a>Home</a></li>
+        <li><a>News</a></li>
+        <li><a>Gallery</a></li>
+        <li><a>About Us</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
 
 </html>
