Add initial body and html styling Add initial navbar styling Add font

--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -10,17 +10,19 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap&subset=latin-ext"
+    rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a>Home</a></li>
-        <li><a>News</a></li>
-        <li><a>Gallery</a></li>
-        <li><a>About Us</a></li>
-        <li><a>Contact</a></li>
+    <nav class="navbar">
+      <ul class="nav-list">
+        <li class="nav-list-item"><a href="#">Home</a></li>
+        <li class="nav-list-item"><a href="#">News</a></li>
+        <li class="nav-list-item"><a href="#">Gallery</a></li>
+        <li class="nav-list-item"><a href="#">About Us</a></li>
+        <li class="nav-list-item"><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
