--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -12,22 +12,29 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap&subset=latin-ext"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gruppo&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <nav class="navbar">
+      <a class="nav-brand kb-craft-logo">KB Craft</a>
+
       <ul class="nav-list">
         <li class="nav-list-item"><a href="#">Home</a></li>
-        <li class="nav-list-item"><a href="#">News</a></li>
-        <li class="nav-list-item"><a href="#">Gallery</a></li>
+        <li class="nav-list-item"><a href="#">Showcase</a></li>
+        <li class="nav-list-item cta"><a href="#">Craft</a></li>
         <li class="nav-list-item"><a href="#">About Us</a></li>
         <li class="nav-list-item"><a href="#">Contact</a></li>
       </ul>
+
+      <span></span>
     </nav>
   </header>
-  <main></main>
-  <footer></footer>
+  <main class="main">
+    <div class="content">Content placeholder</div>
+    <footer class="footer">Footer placeholder</footer>
+  </main>
 </body>
 
 </html>
