Add license Add GH icon from FontAwesome Add initial content

--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -32,8 +32,14 @@
     </nav>
   </header>
   <main class="main">
-    <div class="content">Content placeholder</div>
-    <footer class="footer">Footer placeholder</footer>
+    <div class="content">
+      <h1>Bespoke Keyboards</h1>
+      <h2>For<span class="header-changer"> Everyone</span></h2>
+    </div>
+    <footer class="footer">
+      <img src="assets/img/github-brands.svg" />
+      Footer placeholder
+    </footer>
   </main>
 </body>
 
