Add initial content card styling Add images and video

--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -35,12 +35,37 @@
     <div class="content">
 
       <div class="heading">
-        <h1>Bespoke Keyboards</h1>
-        <h2>For<span class="header-changer"> Everyone</span></h2>
-        <p>The humble keyboard is a tool used by nearly everyone.<br />Neglecting your keyboard means neglecting your
-          work.</p>
-        <p>We're here to change that!</p>
+        <div class="heading-content">
+          <h1 class="heading-title">Bespoke Keyboards</h1>
+          <h2 class="heading-subtitle">For<span class="header-changer"> Everyone</span></h2>
+          <div class="heading-blur"></div>
+        </div>
+
+        <video class="heading-vid" autoplay muted loop>
+          <source src="assets/vid/01.webm" type="video/webm">
+          Your browser does not support the video tag.
+        </video>
+
       </div>
+
+      <hr class="ridge separator" />
+
+      <div class="card-list container">
+        <div class="card-list-item card-content">
+          <figure>
+            <img class="prop-scale" src="assets/img/03.webp" />
+            <figcaption>A 60&percnt; mechanical keyboard</figcaption>
+          </figure>
+          <div class="card-content-description">
+            <h3 class="card-title">We'll craft your dream keyboard!</h3>
+            <p>Our tooling and expertise guarantees a vast array of options. Be it aluminium cases, LED rim lighting
+              or
+              even buckling springs. We've got you covered!</p>
+            <button><a>Craft</a></button>
+          </div>
+        </div>
+      </div>
+
 
     </div>
     <footer class="footer">
