Modify card list style Add backdrop-filter

--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title></title>
-  <meta name="description" content="">
+  <title>KB Craft</title>
+  <meta name="description" content="Bespoke Keyboard Manufacturer">
   <meta name="keywords" content="html, css, html5, css3">
   <meta name="author" content="Ivan Benko">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,10 +35,9 @@
     <div class="content">
 
       <div class="heading">
-        <div class="heading-content">
+        <div class="heading-content blur">
           <h1 class="heading-title">Bespoke Keyboards</h1>
           <h2 class="heading-subtitle">For<span class="header-changer"> Everyone</span></h2>
-          <div class="heading-blur"></div>
         </div>
 
         <video class="heading-vid" autoplay muted loop>
@@ -51,22 +50,34 @@
       <hr class="ridge separator" />
 
       <div class="card-list container">
-        <div class="card-list-item card-content">
+        <div class="card-list-item">
+          <div class="title blur">
+            <h3>Your dream keyboard</h3>
+          </div>
           <figure>
             <img class="prop-scale" src="assets/img/03.webp" />
-            <figcaption>A 60&percnt; mechanical keyboard</figcaption>
+            <figcaption class="blur">60&percnt; mechanical keyboard</figcaption>
           </figure>
           <div class="card-content-description">
-            <h3 class="card-title">We'll craft your dream keyboard!</h3>
-            <p>Our tooling and expertise guarantees a vast array of options. Be it aluminium cases, LED rim lighting
+            <p>Our tooling and expertise unlocks a vast array of options. Be it aluminium cases, LED rim lighting
               or
-              even buckling springs. We've got you covered!</p>
-            <button><a>Craft</a></button>
+              even buckling springs.<br />We've got you covered!</p>
+          </div>
+        </div>
+        <div class="card-list-item card-content">
+          <div class="title blur">
+            <h3>Craftsmanship</h3>
+          </div>
+          <figure>
+            <img class="prop-scale" src="assets/img/02.webp" />
+            <figcaption class="blur">Custom keycaps with wooden base</figcaption>
+          </figure>
+          <div class="card-content-description">
+            <p>We treat every keyboard we make as if it's our own. All keyboards are made according to
+              <strong>your</strong> specifications.<br />Satisfaction is guaranteed!</p>
           </div>
         </div>
       </div>
-
-
     </div>
     <footer class="footer">
       <div class="footer-container">
