Add more home page cards Add media queries to style home page cards appropriately

--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -56,7 +56,7 @@
           </div>
           <figure>
             <img class="prop-scale" src="assets/img/03.webp" />
-            <figcaption class="blur">60&percnt; mechanical keyboard</figcaption>
+            <figcaption class="blur">60&percnt; mechanical keyboard with aluminium base</figcaption>
           </figure>
           <div class="card-content-description">
             <p>Our tooling and expertise unlocks a vast array of options. Be it aluminium cases, LED rim lighting
@@ -70,11 +70,35 @@
           </div>
           <figure>
             <img class="prop-scale" src="assets/img/02.webp" />
-            <figcaption class="blur">Custom keycaps with wooden base</figcaption>
+            <figcaption class="blur">Custom cyan keycaps with wooden base</figcaption>
           </figure>
           <div class="card-content-description">
             <p>We treat every keyboard we make as if it's our own. All keyboards are made according to
               <strong>your</strong> specifications.<br />Satisfaction is guaranteed!</p>
+          </div>
+        </div>
+        <div class="card-list-item card-content">
+          <div class="title blur">
+            <h3>We made it possible</h3>
+          </div>
+          <figure>
+            <img class="prop-scale" src="assets/img/01.webp" />
+            <figcaption class="blur">Symbolics Space Cadet inspired keyboard</figcaption>
+          </figure>
+          <div class="card-content-description">
+            <p>Don't believe us?<br />Find out how we create works of art.</p>
+          </div>
+        </div>
+        <div class="card-list-item card-content">
+          <div class="title blur">
+            <h3>Get in touch</h3>
+          </div>
+          <figure>
+            <img class="prop-scale" src="assets/img/04.webp" />
+            <figcaption class="blur">60&percnt; mechanical keyboard with SA keycaps</figcaption>
+          </figure>
+          <div class="card-content-description">
+            <p>Feel free to ask us a question or make a very special request.<br />Don't be shy!</p>
           </div>
         </div>
       </div>
