Initial simple glass effect on card title and figcaption

--- a/src/Web/src/index.html
+++ b/src/Web/src/index.html
@@ -50,10 +50,9 @@
       <hr class="ridge separator" />
 
       <div class="card-list container">
-        <div class="card-list-item">
-          <div class="title blur">
-            <h3>Your dream keyboard</h3>
-          </div>
+
+        <article class="card-list-item">
+          <h3 class="title blur">Your dream keyboard</h3>
           <figure>
             <img class="prop-scale" src="assets/img/03.webp" />
             <figcaption class="blur">60&percnt; mechanical keyboard with aluminium base</figcaption>
@@ -63,11 +62,10 @@
               or
               even buckling springs.<br />We've got you covered!</p>
           </div>
-        </div>
-        <div class="card-list-item card-content">
-          <div class="title blur">
-            <h3>Craftsmanship</h3>
-          </div>
+        </article>
+
+        <article class="card-list-item card-content">
+          <h3 class="title blur">Craftsmanship</h3>
           <figure>
             <img class="prop-scale" src="assets/img/02.webp" />
             <figcaption class="blur">Custom cyan keycaps with wooden base</figcaption>
@@ -76,11 +74,10 @@
             <p>We treat every keyboard we make as if it's our own. All keyboards are made according to
               <strong>your</strong> specifications.<br />Satisfaction is guaranteed!</p>
           </div>
-        </div>
-        <div class="card-list-item card-content">
-          <div class="title blur">
-            <h3>We made it possible</h3>
-          </div>
+        </article>
+
+        <article class="card-list-item card-content">
+          <h3 class="title blur">We made it possible</h3>
           <figure>
             <img class="prop-scale" src="assets/img/01.webp" />
             <figcaption class="blur">Symbolics Space Cadet inspired keyboard</figcaption>
@@ -88,11 +85,10 @@
           <div class="card-content-description">
             <p>Don't believe us?<br />Find out how we create works of art.</p>
           </div>
-        </div>
-        <div class="card-list-item card-content">
-          <div class="title blur">
-            <h3>Get in touch</h3>
-          </div>
+        </article>
+
+        <article class="card-list-item card-content">
+          <h3 class="title blur">Get in touch</h3>
           <figure>
             <img class="prop-scale" src="assets/img/04.webp" />
             <figcaption class="blur">60&percnt; mechanical keyboard with SA keycaps</figcaption>
@@ -100,7 +96,8 @@
           <div class="card-content-description">
             <p>Feel free to ask us a question or make a very special request.<br />Don't be shy!</p>
           </div>
-        </div>
+        </article>
+
       </div>
     </div>
     <footer class="footer">
