Simplify heading styling Start adding content to about-us.html

--- a/src/Web/src/about-us.html
+++ b/src/Web/src/about-us.html
@@ -32,73 +32,8 @@
     </nav>
   </header>
   <main class="main">
-    <div class="content">
-
-      <div class="heading">
-        <div class="heading-content blur">
-          <h1 class="heading-title">Bespoke Keyboards</h1>
-          <h2 class="heading-subtitle">For<span class="header-changer"> Everyone</span></h2>
-        </div>
-
-        <video class="heading-vid" autoplay muted loop>
-          <source src="assets/vid/01.webm" type="video/webm">
-          Your browser does not support the video tag.
-        </video>
-
-      </div>
-
-      <hr class="ridge separator" />
-
-      <div class="card-list container">
-
-        <article class="card-list-item">
-          <h3 class="title blur">Your dream keyboard</h3>
-          <figure>
-            <img class="prop-scale" src="assets/img/03.webp" />
-            <figcaption class="blur">60&percnt; mechanical keyboard with aluminium base</figcaption>
-          </figure>
-          <div class="card-content-description">
-            <p>Our tooling and expertise unlocks a vast array of options. Be it aluminium cases, LED rim lighting
-              or
-              even buckling springs.<br />We've got you covered!</p>
-          </div>
-        </article>
-
-        <article class="card-list-item card-content">
-          <h3 class="title blur">Craftsmanship</h3>
-          <figure>
-            <img class="prop-scale" src="assets/img/02.webp" />
-            <figcaption class="blur">Custom cyan keycaps with wooden base</figcaption>
-          </figure>
-          <div class="card-content-description">
-            <p>We treat every keyboard we make as if it's our own. All keyboards are made according to
-              <strong>your</strong> specifications.<br />Satisfaction is guaranteed!</p>
-          </div>
-        </article>
-
-        <article class="card-list-item card-content">
-          <h3 class="title blur">We made it possible</h3>
-          <figure>
-            <img class="prop-scale" src="assets/img/01.webp" />
-            <figcaption class="blur">Symbolics Space Cadet inspired keyboard</figcaption>
-          </figure>
-          <div class="card-content-description">
-            <p>Don't believe us?<br />Find out how we create works of art.</p>
-          </div>
-        </article>
-
-        <article class="card-list-item card-content">
-          <h3 class="title blur">Get in touch</h3>
-          <figure>
-            <img class="prop-scale" src="assets/img/04.webp" />
-            <figcaption class="blur">60&percnt; mechanical keyboard with SA keycaps</figcaption>
-          </figure>
-          <div class="card-content-description">
-            <p>Feel free to ask us a question or make a very special request.<br />Don't be shy!</p>
-          </div>
-        </article>
-
-      </div>
+    <div class="content container">
+      <h1></h1>
     </div>
     <footer class="footer">
       <div class="footer-container">
